Initialize author card

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,8 @@
 .vscode
 .vscode/settings.json
 Spyridon_Vigkos.jpg
-profileSpiros_400X.jpg
 personal-blog-ws.code-workspace
 test-card.html
-css/cards.css
-
+author.html
 
 
